tests/baselines/reference/moduleMemberWithoutTypeAnnotation1.errors.txt
moduleMemberWithoutTypeAnnotation1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleMemberWithoutTypeAnnotation1.ts(1,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleMemberWithoutTypeAnnotation1.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleMemberWithoutTypeAnnotation1.ts(25,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleMemberWithoutTypeAnnotation1.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleMemberWithoutTypeAnnotation1.ts(37,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleMemberWithoutTypeAnnotation1.ts (6 errors) ====
    module TypeScript.Parser {
           ~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                      ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class SyntaxCursor {
            public currentNode(): SyntaxNode {
                return null;
            }
        }
    }
    
    module TypeScript {
           ~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface ISyntaxElement { };
        export interface ISyntaxToken { };
    
        export class PositionedElement {
            public childIndex(child: ISyntaxElement) {
                return Syntax.childIndex();
            }
        }
    
        export class PositionedToken {
            constructor(parent: PositionedElement, token: ISyntaxToken, fullStart: number) {
            }
        }
    }
    
    module TypeScript {
           ~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class SyntaxNode {
            public findToken(position: number, includeSkippedTokens: boolean = false): PositionedToken {
                var positionedToken = this.findTokenInternal(null, position, 0);
                return null;
            }
            findTokenInternal(x, y, z) {
                return null;
            }
        }
    }
    
    module TypeScript.Syntax {
           ~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                      ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function childIndex() { }
    
        export class VariableWidthTokenWithTrailingTrivia implements ISyntaxToken {
            private findTokenInternal(parent: PositionedElement, position: number, fullStart: number) {
                return new PositionedToken(parent, this, fullStart);
            }
        }
    }
    